Fix contrast

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -87,9 +87,9 @@
   --nav-border-color: var(--neutral-90);
   --menu-fg: var(--neutral-50);
   --menu-bg-hover: var(--neutral-95);
-  --menu-fg-hover: var(--primary-50);
+  --menu-fg-hover: var(--primary-55);
   --menu-bg-active: var(--neutral-95);
-  --menu-fg-active: var(--primary-50);
+  --menu-fg-active: var(--primary-55);
   --menu-ripple-bg: var(--neutral-90);
 
   /* button */
